Add best clients endpoint
